Fix media queries not to overlap each other

--- a/app/assets/stylesheets/util/variables.scss
+++ b/app/assets/stylesheets/util/variables.scss
@@ -9,16 +9,34 @@ $font-color-dark: #4E4E4E;
 $main-font: 'BebasNeueRegular', Arial, sans-serif;
 
 /* viewport sizes */
-$small: 768px;
-$medium: 1024px;
-$large: 1228px;
+
+@function lower-bound($range){
+  @if length($range) <= 0 {
+    @return 0;
+  }
+  @return nth($range,1);
+}
+
+@function upper-bound($range) {
+  @if length($range) < 2 {
+    @return 999999999999;
+  }
+  @return nth($range, 2);
+}
+
 $screen: "only screen";
-$small-only: "#{$screen} and (max-width: #{$small})";
-$medium-up: "#{$screen} and (min-width:#{$small})";
-$medium-only: "#{$screen} and (min-width:#{$small}) and (max-width:#{$medium})";
-$large-up: "#{$screen} and (min-width:#{$medium})";
-$large-only: "#{$screen} and (min-width:#{$medium}) and (max-width:#{$large})";
-$x-large-up: "#{$screen} and (min-width:#{$large})";
+$small-range: (0px, 768px);
+$medium-range: (769px, 1024px);
+$large-range: (1025px, 1228px);
+$xlarge-range: (1228px, 5000px);
+
+$small-only: "#{$screen} and (max-width: #{upper-bound($small-range)})";
+$medium-up: "#{$screen} and (min-width:#{lower-bound($medium-range)})";
+$medium-only: "#{$screen} and (min-width:#{lower-bound($medium-range)}) and (max-width:#{upper-bound($medium-range)})";
+$large-up: "#{$screen} and (min-width:#{lower-bound($large-range)})";
+$large-only: "#{$screen} and (min-width:#{lower-bound($large-range)}) and (max-width:#{upper-bound($large-range)})";
+$xlarge-up: "#{$screen} and (min-width:#{lower-bound($xlarge-range)})";
+$xlarge-only: "#{$screen} and (min-width:#{lower-bound($xlarge-range)}) and (max-width:#{upper-bound($xlarge-range)})";
 
 /* misc */
 $footer-height: 400px;
